--- a/graphviz.in
+++ b/graphviz.in
@@ -240,19 +240,19 @@ ATYPE halfopen
 ATYPE circle
 
 
-EDGE_LABEL_YESNO	yes
-EDGE_LABEL_YESNO	no
-EDGE_LABEL_YESNO+2	SCI_PROVE_VERB
-EDGE_LABEL_YESNO	SCI_VERBED
+EDGE_LABEL_YESNO	"yes"
+EDGE_LABEL_YESNO	"no"
+EDGE_LABEL_YESNO+2	"SCI_PROVE_VERB"
+EDGE_LABEL_YESNO	"SCI_VERBED"
 
 
-NODE_LABEL_PROG		AREAMOD AREANOUN
-NODE_LABEL_PROG+10	SYSNAME
-NODE_LABEL_PROG		MNOUNS
-NODE_LABEL_PROG		network
-NODE_LABEL_PROG		CONSTRAINT_TYPEX
-NODE_LABEL_PROG		shell
-NODE_LABEL_PROG		EXP_WHERE_CMN
+NODE_LABEL_PROG		"AREAMOD AREANOUN"
+NODE_LABEL_PROG+10	"SYSNAME"
+NODE_LABEL_PROG		"MNOUNS"
+NODE_LABEL_PROG		"network"
+NODE_LABEL_PROG		"CONSTRAINT_TYPEX"
+NODE_LABEL_PROG		"shell"
+NODE_LABEL_PROG		"EXP_WHERE_CMN"
 
 
 
@@ -261,8 +261,8 @@ NODE_LABEL_DEC		"NODE_LABEL_LET | NODE_LABEL_LET"
 NODE_LABEL_DEC		"NODE_LABEL_LET || NODE_LABEL_LET"
 NODE_LABEL_DEC	"SCI_APPROACH_PL"
 NODE_LABEL_DEC	"SYSNAME"
-NODE_LABEL_DEC	stop
-NODE_LABEL_DEC	start
+NODE_LABEL_DEC	"stop"
+NODE_LABEL_DEC	"start"
 
 TWODIG	NONZ
 TWODIG	NONZDIGIT
