--- a/corprules.in
+++ b/corprules.in
@@ -6389,7 +6389,7 @@ PIERING {
 PIETOPIC+1 MATHADJ PROPNOUN
 PIETOPIC+1 SCI_GENERIC_NOUNX
 PIETOPIC+1 SCI_THING
-PIETOPIC+1 AREAADJ SCI_FIELD
+PIETOPIC+1 SCI_FIELD
 PIETOPIC+1   EXP_ADJ SCI_MODEL_TYPE_P
 PIETOPIC+1   CONSTRAINT_TYPE
 PIETOPIC OTHER
