--- a/corprules.in
+++ b/corprules.in
@@ -5948,7 +5948,7 @@ GRAPH_ERRORS+4
 GRAPH_CURVE_LABEL title 'NETWORK_TYPE'
 GRAPH_CURVE_LABEL title 'EXP_ADJ SCI_BUZZWORD_NOUN'
 GRAPH_CURVE_LABEL title 'PROPNOUN'
-GRAPH_CURVE_LABEL title 'CONSTRAINT_TYPE'
+GRAPH_CURVE_LABEL title 'CONSTRAINT_TYPEX'
 
 GNUPLOT {
 
@@ -5961,11 +5961,11 @@ GNUPLOT {
  
 }
 
-PLOTTITLE EXP_ADJ SCI_COMPLEXNOUN of SCI_FIELD
+PLOTTITLE SCI_COMPLEXNOUN of SCI_FIELD
 PLOTTITLE EXP_ADJ SCI_BUZZWORD_NOUN
 PLOTTITLE EXP_ADJ PREFIXX-SCI_BUZZWORD_NOUN
 PLOTTITLE NETWORK_TYPE MNOUN
-PLOTTITLE HACKED CONSTRAINT_TYPE
+PLOTTITLE HACKED CONSTRAINT_TYPEX
 
 
 #############################################################################
@@ -6578,9 +6578,9 @@ COORD -2
 COORD 3
 COORD -3
 
+PSC 2
 PSC 3
 PSC 4
-PSC 5
 
 
 
