--- a/corprules.in
+++ b/corprules.in
@@ -4029,17 +4029,19 @@ LIT_GREAT_V	improbable
 LIT_GREAT_ADV LIT_GREAT_ADV_NV
 LIT_GREAT_ADV LIT_GREAT_ADV_V
 
-LIT_GREAT_ADV_NV	profoundly
-LIT_GREAT_ADV_NV	tremendously
-LIT_GREAT_ADV_NV	minimally
-LIT_GREAT_ADV_V		improbably
-LIT_GREAT_ADV_NV	serendipitously
-LIT_GREAT_ADV_NV	conveniently
-LIT_GREAT_ADV_V		extensively
-LIT_GREAT_ADV_V		inconveniently
-LIT_GREAT_ADV_V		unexpectedly
-LIT_GREAT_ADV_V		eventually
-LIT_GREAT_ADV_NV	SCI_MAINly
+LIT_GREAT_ADV_NV+30	profoundly
+LIT_GREAT_ADV_NV+30	tremendously
+LIT_GREAT_ADV_NV+30	minimally
+LIT_GREAT_ADV_V+30	improbably
+LIT_GREAT_ADV_NV+30	serendipitously
+LIT_GREAT_ADV_NV+30	conveniently
+LIT_GREAT_ADV_V+30	extensively
+LIT_GREAT_ADV_V+30	inconveniently
+LIT_GREAT_ADV_V+30	unexpectedly
+LIT_GREAT_ADV_V+30	eventually
+LIT_GREAT_ADV_NV+30	SCI_MAINly
+LIT_GREAT_ADV_NV	biblically
+LIT_GREAT_ADV_V		orgasmically
 
 
 LIT_OFTEN	often
@@ -4601,25 +4603,26 @@ SCI_PROVE_VERB solve
 SCI_PROVE_VERB address
 SCI_PROVE_VERB+3 EVAL_WHY_VERB
 
-SCI_PROVE_VERBED published
-SCI_PROVE_VERBED demonstrated
-SCI_PROVE_VERBED argued
-SCI_PROVE_VERBED proved
-#SCI_PROVE_VERBED shown 
-SCI_PROVE_VERBED disproved
-SCI_PROVE_VERBED validated
-SCI_PROVE_VERBED verified
-SCI_PROVE_VERBED confirmed
-SCI_PROVE_VERBED disconfirmed
-SCI_PROVE_VERBED benchmark tested
-SCI_PROVE_VERBED quality tested
-SCI_PROVE_VERBED pharmaceutically METAVERBED
-SCI_PROVE_VERBED clinically METAVERBED
-SCI_PROVE_VERBED mathematically METAVERBED
-SCI_PROVE_VERBED scientifically METAVERBED
-SCI_PROVE_VERBED medically METAVERBED
-SCI_PROVE_VERBED solved
-SCI_PROVE_VERBED addressed
+SCI_PROVE_VERBED+30 published
+SCI_PROVE_VERBED+30 demonstrated
+SCI_PROVE_VERBED+30 argued
+SCI_PROVE_VERBED+30 proved
+#SCI_PROVE_VERBED+30 shown 
+SCI_PROVE_VERBED+30 disproved
+SCI_PROVE_VERBED+30 validated
+SCI_PROVE_VERBED+30 verified
+SCI_PROVE_VERBED+30 confirmed
+SCI_PROVE_VERBED+30 disconfirmed
+SCI_PROVE_VERBED+30 benchmark tested
+SCI_PROVE_VERBED+30 quality tested
+SCI_PROVE_VERBED+30 pharmaceutically METAVERBED
+SCI_PROVE_VERBED+30 clinically METAVERBED
+SCI_PROVE_VERBED+30 mathematically METAVERBED
+SCI_PROVE_VERBED+30 scientifically METAVERBED
+SCI_PROVE_VERBED+30 medically METAVERBED
+SCI_PROVE_VERBED+30 solved
+SCI_PROVE_VERBED+30 addressed
+SCI_PROVE_VERBED orgasmed
 
 SCI_PROVE_VERBING demonstrating
 SCI_PROVE_VERBING arguing
@@ -5120,10 +5123,15 @@ SCI_ACH	SCI_VERBED SCI_THING_MOD (which SCI_EFFECT)
 SCI_ACH_PRES	SCI_VERBING SCI_THING_MOD
 SCI_ACH_PRES	SCI_VERBING SCI_THING_MOD (which SCI_EFFECT)
 
+
+YESORNO yes
+YESORNO no
+
 SCI_RESPONSE	yes. 
 SCI_RESPONSE	absolutely. 
 SCI_RESPONSE	oh yes.
-SCI_RESPONSE 	for goodness sake, yes!
+SCI_RESPONSE 	for goodness sake, YESORNO!
+SCI_RESPONSE 	for pete's sake, YESORNO!
 SCI_RESPONSE	no doubt. 
 SCI_RESPONSE	it depends.
 SCI_RESPONSE	yes, LREV. 
