--- a/corprules.in
+++ b/corprules.in
@@ -558,8 +558,7 @@ SCI_INTRO_GENERIC_FIRST a SCI_ADJ approach to SCI_SOLVE_CLAUSE is the SCI_ACT
 SCI_INTRO_GENERIC_FIRST motivated by these SCI_SYS_VERBIONs, SCI_GENERIC_NOUN and SCI_GENERIC_NOUN have been SCI_ADV SCI_VERBED by SCI_COUNTRY_MAYBE SCI_PEOPLE 
 SCI_INTRO_GENERIC_FIRST SCI_COUNTRY_MAYBE SCI_PEOPLE LIT_OFTEN SCI_VERB SCI_GENERIC_NOUN to SCI_VERB SCI_GENERIC_NOUN 
 SCI_INTRO_GENERIC_FIRST EXP_ADJ SCI_SYSTEM_PL are particularly SCI_ADJ when it comes to SCI_GENERIC_NOUN 
-SCI_INTRO_GENERIC_FIRST To our knowledge, our work SCI_IN_THIS_PAPER marks the first SCI_SYSTEM SCI_VERBED specifically for SCI_GENERIC_NOUN 
-SCI_INTRO_GENERIC_FIRST To our knowledge, our work SCI_IN_THIS_PAPER marks the first SCI_SYSTEM SCI_VERBED specifically for SCI_GENERIC_NOUN 
+SCI_INTRO_GENERIC_FIRST to our knowledge, our work SCI_IN_THIS_PAPER marks the first SCI_SYSTEM SCI_VERBED specifically for SCI_GENERIC_NOUN 
 SCI_INTRO_GENERIC_FIRST LIT_REVERSAL, this SCI_APPROACH is fraught with difficulty, LIT_OFTEN due to SCI_GENERIC_NOUN 
 SCI_INTRO_GENERIC_FIRST we question the need for SCI_GENERIC_NOUN 
 
@@ -3639,7 +3638,7 @@ SCI_THING_P+6	EXP_ADJ systems
 
 SCI_THING_MOD+20	SCI_THING_P 
 SCI_THING_MOD+25 MNOUNS of SCI_THING_P  
-SCI_THING_MOD+25 EXP_WHEREs of SCI_THING_P 
+SCI_THING_MOD+25 EXP_WHEREs for SCI_THING_P 
 
 SCI_THING_MOD	SCI_THING_MOD (at the \textit{PREFIX} scale)
 SCI_THING_MOD	SCI_THING_MOD (LIT_REVERSAL_MAYBEat the \textit{PREFIX} scale)
@@ -5269,9 +5268,9 @@ SCI_COMPLEXITY 	 SCI_COMPLEXITY_COMPLEX
 
 SCI_COMPLEXITY_COMPLEX+5 $EXPRB$
 SCI_COMPLEXITY_COMPLEX $SCC_EXPR$
-SCC_EXPR+15	n
-SCC_EXPR+11	\log\, SCC_EXPR
-SCC_EXPR+11	FUNC SCC_EXPR
+SCC_EXPR+50	n
+SCC_EXPR+5	\log\, SCC_EXPR
+SCC_EXPR+5	FUNC SCC_EXPR
 SCC_EXPR	( SCC_EXPR + SCC_EXPR )
 SCC_EXPR	SCC_EXPR + SCC_EXPR 
 SCC_EXPR	{SCC_EXPR_BASE} ^ { SCC_EXPR }
