--- a/corprules.in
+++ b/corprules.in
@@ -498,7 +498,7 @@ SCI_INTRO_GENERIC_MID_3 SCI_INTRO_GENERIC_MID_2 XXX SCI_INTRO_GENERIC_MID
 SCI_INTRO_GENERIC_MID_4 SCI_INTRO_GENERIC_MID_3 XXX SCI_INTRO_GENERIC_MID 
 SCI_INTRO_GENERIC_MID LIT_LEADIN the SCI_DRAWBACK of this type of SCI_APPROACH, however, is that SCI_OVERALL_THESIS_PROVE 
 SCI_INTRO_GENERIC_MID LIT_LEADIN the basic tenant of this SCI_APPROACH is that SCI_THING_P SCI_VERB_PL 
-SCI_INTRO_GENERIC_MID LIT_LEADIN LIT_ALTHOUGH GENERAL OPINION states that this SCI_PROBLEM is LIT_OFTEN SCI_PROBLEM_SOLVED by the SCI_ACT, we believe that a different SCI_APPROACH is necessary 
+SCI_INTRO_GENERIC_MID LIT_LEADIN LIT_ALTHOUGH GENERAL OPINION states that this SCI_PROBLEM is LIT_OFTEN SCI_PROBLEM_SOLVED by the SCI_ACT, we believe that a different SCI_APPROACH is  REQUIRED
 SCI_INTRO_GENERIC_MID LIT_LEADIN indeed, SCI_THING_P and SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN have a long history of SCI_VERBING_PL in this SCI_MANNER 
 SCI_INTRO_GENERIC_MID LIT_LEADIN two properties make this SCI_APPROACH IDEAL:  SCI_SYSTEM_PROP, and also, SCI_SYSTEM_PROP 
 SCI_INTRO_GENERIC_MID LIT_LEADIN SCI_SYSTEM_PROP 
@@ -821,8 +821,23 @@ SCI_ASSUME	believe
 SCI_ASSUME	posit
 SCI_ASSUME	propose
 
+SUCCESS success
+SUCCESS noteriety
+SUCCESS fame
+SUCCESS infamy
+SUCCESS renown
+SUCCESS reputation
+SUCCESS \acute{e}clat
+SUCCESS accomplishment
+SUCCESS advancement
+SUCCESS realisation
+SUCCESS triumph
+SUCCESS eminence
+SUCCESS fruition
+SUCCESS maturation
+
 MODEL_MID	LIT_MIDDLE_MAYBE MODEL_MID_X MODEL_XXX
-MODEL_MID_X	SCI_OUR_SYSTEM does not require such a SCI_ADJ SCI_SYS_VERBION for the success of such a EXP_ADJ SCI_MODEL_TYPE, but it is LIT_OFTEN advisable
+MODEL_MID_X	SCI_OUR_SYSTEM does not require such a SCI_ADJ SCI_SYS_VERBION for the SUCCESS of such a EXP_ADJ SCI_MODEL_TYPE, but it is LIT_OFTEN advisable
 MODEL_MID_X	we SCI_ASSUME that SCI_OVERALL_THESIS_PROVE
 MODEL_MID_X	consider the early SCI_MODEL_TYPE by SCI_BY_WHO; our SCI_MODEL_TYPE is similar, but will actually SCI_SOLVE_CLAUSE
 MODEL_MID_X	any SCI_ADJ SCI_VERBION of SCI_GENERIC_NOUN will clearly require that SCI_OVERALL_THESIS_PROVE; SCI_OUR_SYSTEM is no different
@@ -1056,8 +1071,8 @@ IMPL_MID_X we have not yet implemented the IMPL_COMPONENT, as this is the least 
 IMPL_MID_X since SCI_SYSTEM_PROP, PROGRAMMING_VERBING the IMPL_COMPONENT was relatively straightforward
 IMPL_MID_X SCI_OUR_SYSTEM requires EXP_ADJ access in order to SCI_SYS_VERB SCI_GENERIC_NOUN
 IMPL_MID_X LIT_ALTHOUGH we have not yet optimised for CONSTRAINT_TYPE, this should be simple once we finish PROGRAMMING_VERBING the IMPL_COMPONENT
-IMPL_MID_X SCI_COUNTRY_MAYBE SCI_PEOPLE have complete control over the IMPL_COMPONENT, which of course is necessary so that SCI_OVERALL_THESIS_PROVE
-IMPL_MID_X it was necessary to cap the EVAL_MEASUREMENT_UM used by SCI_OUR_SYSTEM to MED_NUM EVAL_UNIT_UM
+IMPL_MID_X SCI_COUNTRY_MAYBE SCI_PEOPLE have complete control over the IMPL_COMPONENT, which of course is REQUIRED so that SCI_OVERALL_THESIS_PROVE
+IMPL_MID_X it was REQUIRED to cap the EVAL_MEASUREMENT_UM used by SCI_OUR_SYSTEM to MED_NUM EVAL_UNIT_UM
 IMPL_MID_X the IMPL_COMPONENT and the IMPL_COMPONENT must run IMPL_RUN_TYPE
 # IMPL_MID_X our IMPL_COMPONENT REQUIRED 
 
@@ -2672,7 +2687,7 @@ EVAL_SEC_FILLER	Configurations without this modification showed DIFFERENT EVAL_M
 EVAL_SEC_FILLER	With this change, we noted DIFFERENT PERFORMANCE IMPROVEMENT
 EVAL_SEC_FILLER	This step flies in the face of GENERAL OPINION, but is INSTRUMENTAL to our FINDINGs
 EVAL_SEC_FILLER	To find the required HARDWARE_ITEMS, we combed the International SCI_BUZZWORD_NOUN database 
-EVAL_SEC_FILLER	We struggled to amass the necessary HARDWARE_ITEMS
+EVAL_SEC_FILLER	We struggled to amass the REQUIRED HARDWARE_ITEMS
 EVAL_SEC_FILLER	The HARDWARE_ITEMS SCI_PRESENT_VERBED here explain our UNIQUE FINDINGs
 EVAL_SEC_FILLER	ABOVE, TAKE_NOTE_THAT only experiments on our EXP_WHERE (and not on our EXP_WHERE) followed this pattern
 EVAL_SEC_FILLER	We only NOTED these results when EMULATING_IT
@@ -5101,7 +5116,7 @@ FILLER_SENTENCE+15		This is an SCI_IMPORTANTV point to UNDERSTAND
 FILLER_SENTENCE		This point is, SOSEEM, deceptively truthful 
 FILLER_SENTENCE		This point is, SOSEEM, \emph{deceptively truthful} 
 FILLER_SENTENCE			This represents a SCI_ADJ point (see CITATION)
-FILLER_SENTENCE+15		This is INSTRUMENTAL to the success of our RECENT work
+FILLER_SENTENCE+15		This is INSTRUMENTAL to the SUCCESS of our RECENT work
 FILLER_SENTENCE+15		We LIT_OMIT WHAT_PL OMIT_WHY
 FILLER_SENTENCE+15		Of course, this is not always POSCASE
 FILLER_SENTENCE+10		This follows from the SCI_ACT CITATION_SOMETIMES
