--- a/corprules.in
+++ b/corprules.in
@@ -551,6 +551,8 @@ SCI_GENERIC_NOUNX+20 EXP_ADJ PREFIXX-SCI_BUZZWORD_NOUN
 SCI_GENERIC_NOUNX+20 PREFIXX-SCI_BUZZWORD_NOUN
 SCI_GENERIC_NOUNX GOOD_ADJ GOOD_NOUN
 SCI_GENERIC_NOUNX GOOD_NOUN
+SCI_GENERIC_NOUNX CHEM
+SCI_GENERIC_NOUNX CHEMX
 
 SCI_GENERIC_NOUN+70 SCI_GENERIC_NOUNX
 SCI_GENERIC_NOUN+18 the SCI_ACT
@@ -3818,8 +3820,8 @@ CSENDX CSEND$^{-}$
 CSENDX CSEND$^{NONZ-}$
 CSENDX CSEND$^{\bullet}$
 
-CHEM+4 CSYM CSENDX
-CHEM CHEM
+CHEMX+4 CSYM CSENDX
+CHEMX CHEMX
 
 SCI_SYSTEM	EXP_ADJ algorithm
 SCI_SYSTEM	EXP_ADJ system
