--- a/corprules.in
+++ b/corprules.in
@@ -92,7 +92,7 @@ SCI_TITLE_PREFIX
 
 SCI_TITLE_POSTFIX 	SCI_USING SYSNAME
 SCI_TITLE_POSTFIX 	with SYSNAME
-SCI_TITLE_POSTFIX 	with SCI_GENERIC_NOUN
+SCI_TITLE_POSTFIX 	with SCI_GENERIC_NOUNX
 SCI_TITLE_POSTFIX
 
 SCI_TITLE SCI_TITLE_X
@@ -551,9 +551,8 @@ SCI_GENERIC_NOUNX+20 EXP_ADJ PREFIXX-SCI_BUZZWORD_NOUN
 SCI_GENERIC_NOUNX+20 PREFIXX-SCI_BUZZWORD_NOUN
 SCI_GENERIC_NOUNX GOOD_ADJ GOOD_NOUN
 SCI_GENERIC_NOUNX GOOD_NOUN
-SCI_GENERIC_NOUNX CHEM
-SCI_GENERIC_NOUNX CHEMX
-
+SCI_GENERIC_NOUN+10 CHEM
+SCI_GENERIC_NOUN+10 CHEMX
 SCI_GENERIC_NOUN+70 SCI_GENERIC_NOUNX
 SCI_GENERIC_NOUN+18 the SCI_ACT
 SCI_GENERIC_NOUN+18 SCI_THING_MOD
@@ -829,7 +828,7 @@ SUCCESS fame
 SUCCESS infamy
 SUCCESS renown
 SUCCESS reputation
-SUCCESS \acute{e}clat
+SUCCESS {$\acute{e}$}clat
 SUCCESS accomplishment
 SUCCESS advancement
 SUCCESS realisation
@@ -6004,7 +6003,7 @@ EVAL_MEASUREMENT_UM throughput
 EVAL_MEASUREMENT_UM speed
 EVAL_MEASUREMENT_UM+8 EXP_ADJ potential
 EVAL_MEASUREMENT_UM latency
-EVAL_MEASUREMENT_UM+3 SCI_GENERIC_NOUN 
+EVAL_MEASUREMENT_UM+3 SCI_GENERIC_NOUNX
 EVAL_MEASUREMENT_UM+3 OVERVERBING RATE
 EVAL_MEASUREMENT_UM+8 EXP_ADJ RATE  
 EVAL_MEASUREMENT_UM work MNOUN
